Implement OffHeapHashSet